redis integration (first v)

--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/cache-manager": "^4.0.2",
+    "cache-manager": "^4.0.0",
+    "cache-manager-redis-store": "^2.0.0",
+    "dotenv": "^16.0.3",
     "mongoose": "^6.6.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
