--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@types/cache-manager": "^4.0.2",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/lodash": "^4.14.186",
+    "bcrypt": "^5.1.0",
     "cache-manager": "^4.0.0",
     "cache-manager-redis-store": "^2.0.0",
     "dotenv": "^16.0.3",
-    "mongoose": "^6.6.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
